--- a/TravelPranner.ipynb
+++ b/TravelPranner.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNSz6KhtLKHIa6pBhRPg85g",
+      "authorship_tag": "ABX9TyPis+N7rp6GrWCOdvkv12Sa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 55,
       "metadata": {
         "id": "tRvOqBsk_95h"
       },
       "outputs": [],
       "source": [
-        "pip install -q streamlit google-generativeai"
+        "pip install -q streamlit google-generativeai pyngrok\n"
       ]
     },
     {
@@ -50,8 +50,37 @@
       "metadata": {
         "id": "HDeKDZfsAZds"
       },
-      "execution_count": 23,
+      "execution_count": 56,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyngrok import ngrok\n",
+        "\n",
+        "!ngrok authtoken YOUR_NGROK_AUTH_TOKEN\n",
+        "\n",
+        "public_url = ngrok.connect(8501)\n",
+        "print(\"🌍 Public URL →\", public_url.public_url)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "61WVklkaORqr",
+        "outputId": "e265572d-e0ab-47c4-f001-b0d8b8eef48d"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Authtoken saved to configuration file: /root/.config/ngrok/ngrok.yml\n",
+            "🌍 Public URL → https://462c766068b4.ngrok-free.app\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -75,9 +104,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rx8jYF1UAf9F",
-        "outputId": "e9430853-d347-4629-c380-78f43fd86344"
+        "outputId": "9b5a3f90-34d2-461e-e696-e6070a90cabc"
       },
-      "execution_count": 24,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,9 +164,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fN1OpxYnAkC_",
-        "outputId": "6e7153b8-1815-4b25-c4b4-d55615bb4781"
+        "outputId": "9fb7f5f7-5b5d-4d2e-f7a9-a2f509e1e987"
       },
-      "execution_count": 25,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,9 +240,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uUIItkV5Am4B",
-        "outputId": "cb9000e5-4848-41c0-9d7b-fc71a83b4aa3"
+        "outputId": "571a0734-c7df-41dd-ad10-47ed1587dcc5"
       },
-      "execution_count": 26,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -275,9 +304,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DMo2j2s8Apgt",
-        "outputId": "1220967b-4271-4405-9520-c47b2f272152"
+        "outputId": "abe83102-c827-41d4-9911-d80de4703be5"
       },
-      "execution_count": 27,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
@@ -298,9 +327,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-EPIqSGNAsDh",
-        "outputId": "3eb8ea12-2f4d-4928-9a16-5f710c8e9d00"
+        "outputId": "0cf6587d-87c2-4534-92fc-85d94990caca"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,9 +344,7 @@
             "\u001b[34m  Local URL: \u001b[0m\u001b[1mhttp://localhost:8501\u001b[0m\n",
             "\u001b[34m  Network URL: \u001b[0m\u001b[1mhttp://172.28.0.12:8501\u001b[0m\n",
             "\u001b[34m  External URL: \u001b[0m\u001b[1mhttp://34.86.201.233:8501\u001b[0m\n",
-            "\u001b[0m\n",
-            "\u001b[34m  Stopping...\u001b[0m\n",
-            "\u001b[34m  Stopping...\u001b[0m\n"
+            "\u001b[0m\n"
           ]
         }
       ]
