--- a/TravelPranner.ipynb
+++ b/TravelPranner.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPis+N7rp6GrWCOdvkv12Sa",
+      "authorship_tag": "ABX9TyNcMh/KLygOfB8KP+BG5rZo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "tRvOqBsk_95h"
       },
       "outputs": [],
       "source": [
-        "pip install -q streamlit google-generativeai pyngrok\n"
+        "pip install -q streamlit  pyngrok\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install -U google-generativeai\n"
+      ],
+      "metadata": {
+        "id": "32ukN7eORrLX"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -50,7 +61,7 @@
       "metadata": {
         "id": "HDeKDZfsAZds"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -64,23 +75,10 @@
         "print(\"🌍 Public URL →\", public_url.public_url)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "61WVklkaORqr",
-        "outputId": "e265572d-e0ab-47c4-f001-b0d8b8eef48d"
+        "id": "61WVklkaORqr"
       },
-      "execution_count": 57,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Authtoken saved to configuration file: /root/.config/ngrok/ngrok.yml\n",
-            "🌍 Public URL → https://462c766068b4.ngrok-free.app\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -93,29 +91,17 @@
         "\n",
         "    # Gemini\n",
         "    GEMINI_API_KEY = os.environ.get(\"GEMINI_API_KEY\", \"\")\n",
-        "    GEMINI_MODEL = \"gemini-pro\"\n",
+        "    GEMINI_MODEL = \"gemini-1.5-flash\"\n",
         "\n",
         "    DEFAULT_CURRENCY = \"INR\"\n",
         "    MAX_DAYS = 14\n",
         "    MIN_DAYS = 1"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rx8jYF1UAf9F",
-        "outputId": "9b5a3f90-34d2-461e-e696-e6070a90cabc"
+        "id": "rx8jYF1UAf9F"
       },
-      "execution_count": 58,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting config.py\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -134,7 +120,7 @@
         "            if not Config.GEMINI_API_KEY:\n",
         "                raise ValueError(\"Gemini API key not set.\")\n",
         "            genai.configure(api_key=Config.GEMINI_API_KEY)\n",
-        "            self.model = genai.GenerativeModel(Config.GEMINI_MODEL)\n",
+        "            self.model = genai.GenerativeModel(model_name=Config.GEMINI_MODEL)\n",
         "\n",
         "\n",
         "        else:\n",
@@ -160,22 +146,10 @@
         "        return {\"itinerary_json\": itinerary_json, \"summary_text\": summary_text}"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "fN1OpxYnAkC_",
-        "outputId": "9fb7f5f7-5b5d-4d2e-f7a9-a2f509e1e987"
+        "id": "fN1OpxYnAkC_"
       },
-      "execution_count": 59,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting ai_client.py\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -236,22 +210,10 @@
         "\"\"\""
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "uUIItkV5Am4B",
-        "outputId": "571a0734-c7df-41dd-ad10-47ed1587dcc5"
+        "id": "uUIItkV5Am4B"
       },
-      "execution_count": 60,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting planner.py\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -300,22 +262,10 @@
         "            st.error(f\"Error: {e}\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DMo2j2s8Apgt",
-        "outputId": "abe83102-c827-41d4-9911-d80de4703be5"
+        "id": "DMo2j2s8Apgt"
       },
-      "execution_count": 61,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting app.py\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -327,24 +277,81 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-EPIqSGNAsDh",
-        "outputId": "0cf6587d-87c2-4534-92fc-85d94990caca"
+        "outputId": "317ac057-3a2d-4ec5-d682-ddf17b9dd408"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\n",
-            "Collecting usage statistics. To deactivate, set browser.gatherUsageStats to false.\n",
-            "\u001b[0m\n",
-            "\u001b[0m\n",
-            "\u001b[34m\u001b[1m  You can now view your Streamlit app in your browser.\u001b[0m\n",
-            "\u001b[0m\n",
-            "\u001b[34m  Local URL: \u001b[0m\u001b[1mhttp://localhost:8501\u001b[0m\n",
-            "\u001b[34m  Network URL: \u001b[0m\u001b[1mhttp://172.28.0.12:8501\u001b[0m\n",
-            "\u001b[34m  External URL: \u001b[0m\u001b[1mhttp://34.86.201.233:8501\u001b[0m\n",
-            "\u001b[0m\n"
+            "\u001b[34m  Stopping...\u001b[0m\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/bin/streamlit\", line 8, in <module>\n",
+            "    sys.exit(main())\n",
+            "             ^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/click/core.py\", line 1462, in __call__\n",
+            "    return self.main(*args, **kwargs)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/click/core.py\", line 1383, in main\n",
+            "    rv = self.invoke(ctx)\n",
+            "         ^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/click/core.py\", line 1850, in invoke\n",
+            "    return _process_result(sub_ctx.command.invoke(sub_ctx))\n",
+            "                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/click/core.py\", line 1246, in invoke\n",
+            "    return ctx.invoke(self.callback, **ctx.params)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/click/core.py\", line 814, in invoke\n",
+            "    return callback(*args, **kwargs)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/streamlit/web/cli.py\", line 237, in main_run\n",
+            "    _main_run(target, args, flag_options=kwargs)\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/streamlit/web/cli.py\", line 279, in _main_run\n",
+            "    bootstrap.run(file, is_hello, args, flag_options)\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/streamlit/web/bootstrap.py\", line 332, in run\n",
+            "    asyncio.run(main())\n",
+            "  File \"/usr/lib/python3.12/asyncio/runners.py\", line 195, in run\n",
+            "    return runner.run(main)\n",
+            "           ^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/lib/python3.12/asyncio/runners.py\", line 118, in run\n",
+            "    return self._loop.run_until_complete(task)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/lib/python3.12/asyncio/base_events.py\", line 678, in run_until_complete\n",
+            "    self.run_forever()\n",
+            "  File \"/usr/lib/python3.12/asyncio/base_events.py\", line 645, in run_forever\n",
+            "    self._run_once()\n",
+            "  File \"/usr/lib/python3.12/asyncio/base_events.py\", line 1961, in _run_once\n",
+            "    event_list = self._selector.select(timeout)\n",
+            "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/lib/python3.12/selectors.py\", line 468, in select\n",
+            "    fd_event_list = self._selector.poll(timeout, max_ev)\n",
+            "                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/streamlit/web/bootstrap.py\", line 42, in signal_handler\n",
+            "    server.stop()\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/streamlit/web/server/server.py\", line 509, in stop\n",
+            "    cli_util.print_to_cli(\"  Stopping...\", fg=\"blue\")\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/streamlit/cli_util.py\", line 35, in print_to_cli\n",
+            "    click.secho(message, **kwargs)\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/click/termui.py\", line 684, in secho\n",
+            "    return echo(message, file=file, nl=nl, err=err, color=color)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/click/utils.py\", line 321, in echo\n",
+            "    file.write(out)  # type: ignore\n",
+            "    ^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/streamlit/web/bootstrap.py\", line 42, in signal_handler\n",
+            "    server.stop()\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/streamlit/web/server/server.py\", line 509, in stop\n",
+            "    cli_util.print_to_cli(\"  Stopping...\", fg=\"blue\")\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/streamlit/cli_util.py\", line 35, in print_to_cli\n",
+            "    click.secho(message, **kwargs)\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/click/termui.py\", line 684, in secho\n",
+            "    return echo(message, file=file, nl=nl, err=err, color=color)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/click/utils.py\", line 321, in echo\n",
+            "    file.write(out)  # type: ignore\n",
+            "    ^^^^^^^^^^^^^^^\n",
+            "RuntimeError: reentrant call inside <_io.BufferedWriter name='<stdout>'>\n"
           ]
         }
       ]
