--- a/TravelPranner.ipynb
+++ b/TravelPranner.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGKHTGt720V53UkLLDSvhL",
+      "authorship_tag": "ABX9TyPzGEPmwkkV+Z/3vdHP6E9D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "%%writefile config.py\n",
         "class Config:\n",
         "    PROVIDER = \"gemini\"\n",
-        "    GEMINI_API_KEY = \"AIzaSyDCS4c6KT1F44ySc2uJd0nCOGujbO4YGF8\"\n",
+        "    GEMINI_API_KEY = \"API_KEY\"\n",
         "    GEMINI_MODEL = \"gemini-2.5-flash\"\n",
         "    DEFAULT_CURRENCY = \"INR\"\n",
         "    MIN_DAYS = 1\n",
@@ -214,7 +214,7 @@
         "from pyngrok import ngrok\n",
         "\n",
         "# Authenticate ngrok (replace this with your token)\n",
-        "!ngrok config add-authtoken 32ZDCIHeHLQkViK1PGAiOsa8M7V_3EAirrqMGjzuWy1WcwnSR\n",
+        "!ngrok config add-authtoken YOUR_AUTH_TOKEN\n",
         "\n",
         "# Start Streamlit in background\n",
         "get_ipython().system_raw('streamlit run app.py --server.port 8501 &')\n",
